# predql-tasks

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/model_training/: relational_fel_bc.ipynb  relational_fel_mcc.ipynb  relational_fel_reg.ipynb  relbench_reg.ipynb  train_model_predql.ipynb  utils.py
experiments/model_training/notebooks/: config.yml  relational_fel_bc.ipynb  relational_fel_mcc.ipynb  relational_fel_mlc.ipynb  relational_fel_reg.ipynb  relbench_bc.ipynb  relbench_reg.ipynb
experiments/model_training/training/: text_embedder.py  trainer.py
experiments/model_training/training/models/: base_model.py  gatv2_model.py  gin_model.py  han_model.py  hgt_model.py  sage_model.py
experiments/task_generation/: relational_fel.ipynb  relational_fel_exp.ipynb
predql_tasks/: __init__.py  predql_base_task.py  predql_task_stat.py  predql_task_tmp.py  predql_tasks.py
predql_tasks/base/: __init__.py  predql_base_task.py  predql_stat_task.py  predql_tmp_task.py
predql_tasks/tasks/: __init__.py  predql_stat_tasks.py  predql_tmp_tasks.py
